# concurrently_hmr_repro

./: README.md  run.py
backend/: main.py  pyproject.toml
frontend/src/routes/: +page.svelte
